--- a/.github/workflows/daily_weater.yml
+++ b/.github/workflows/daily_weater.yml
@@ -18,11 +18,14 @@ jobs:
         with:
           python-version: "3.x"
 
+      - name: List files in the root directory
+        run: ls -al
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-        working-directory: /
+        working-directory: ${{ github.workspace }}
 
       - name: Run weather script
         env:
