on push branchesを追加してみた

--- a/.github/workflows/daily_weater.yml
+++ b/.github/workflows/daily_weater.yml
@@ -4,6 +4,9 @@ name: Daily Weather Notification
 on:
   schedule:
     - cron: "0 23 * * *" # 毎日朝8時に実行 (日本時間)
+  push:
+    branches:
+      - main
 
 jobs:
   run-weather-script:
