--- a/.github/workflows/daily_weater.yml
+++ b/.github/workflows/daily_weater.yml
@@ -1,10 +1,12 @@
 name: Daily Weather Notification
 
-# スケジュールを設定
+# トリガー設定
 on:
+  # スケジュールによる実行
   schedule:
     - cron: "0 23 * * *" # 毎日朝8時に実行 (日本時間)
-  workflow_dispatch: # 手動で実行
+  # 手動での実行
+  workflow_dispatch:
 
 jobs:
   run-weather-script:
